--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_large_margin"
+        android:layout_margin="@dimen/activity_mid_margin"
         android:background="@drawable/border_2"
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_100sdp"
             android:layout_margin="@dimen/activity_mid_margin"
             android:src="@drawable/icon_finder_camera"
             tools:ignore="ContentDescription" />
@@ -25,12 +25,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/activity_large_margin"
-            android:background="@drawable/border_blue_1"
-            android:paddingLeft="@dimen/activity_large_padding"
-            android:paddingRight="@dimen/activity_large_padding"
+            android:layout_margin="@dimen/activity_mid_margin"
             android:text="@string/pick_an_image"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="@dimen/textSizeMedium" />
     </LinearLayout>
 </RelativeLayout>
