--- a/app/src/main/res/layout/document_activity.xml
+++ b/app/src/main/res/layout/document_activity.xml
@@ -34,7 +34,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imageView1"
+                        android:id="@+id/image_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/activity_mid_margin"
@@ -211,7 +211,7 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/imageViewMap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_large_margin"
