--- a/app/src/main/res/layout/document_activity1.xml
+++ b/app/src/main/res/layout/document_activity1.xml
@@ -10,41 +10,51 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="@dimen/activity_large_margin"
         android:orientation="vertical"
+        android:weightSum="3"
         tools:ignore="ScrollViewSize">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/activity_large_margin"
-            android:background="@drawable/border_2"
+            android:layout_marginBottom="@dimen/activity_mid_margin"
+            android:layout_weight="1"
+            android:background="@drawable/border_gray_1"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/image_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_margin="@dimen/activity_mid_margin"
+                android:layout_weight="1"
                 android:src="@drawable/icon_finder_camera"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription,NestedWeights" />
 
             <Spinner
                 android:id="@+id/spinnerTitle"
+                style="@style/Widget.AppCompat.Spinner.DropDown"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/activity_large_margin"
-                android:background="@drawable/border_gray_2"
+                android:layout_marginLeft="@dimen/activity_large_margin"
+                android:layout_marginTop="@dimen/activity_mid_margin"
+                android:layout_marginRight="@dimen/activity_large_margin"
+                android:layout_marginBottom="@dimen/activity_mid_margin"
                 android:paddingLeft="@dimen/activity_large_padding"
                 android:paddingRight="@dimen/activity_large_padding" />
 
             <Button
-                android:id="@+id/button_pick1"
+                android:id="@+id/button_pick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/activity_large_margin"
+                android:layout_marginLeft="@dimen/activity_large_margin"
+                android:layout_marginTop="@dimen/activity_mid_margin"
+                android:layout_marginRight="@dimen/activity_large_margin"
+                android:layout_marginBottom="@dimen/activity_mid_margin"
                 android:background="@drawable/border_blue_1"
                 android:paddingLeft="@dimen/activity_large_padding"
                 android:paddingRight="@dimen/activity_large_padding"
@@ -52,23 +62,80 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/textSizeMedium"
                 tools:ignore="MissingConstraints" />
+
+            <Button
+                android:id="@+id/button_upload"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/activity_large_margin"
+                android:layout_marginTop="@dimen/activity_mid_margin"
+                android:layout_marginRight="@dimen/activity_large_margin"
+                android:layout_marginBottom="@dimen/activity_mid_margin"
+                android:background="@drawable/border_green_2"
+                android:text="@string/upload"
+                android:textColor="@color/white"
+                android:textSize="@dimen/textSizeMedium"
+                android:visibility="gone"
+                tools:ignore="MissingConstraints" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_large_margin"
-            android:background="@drawable/border_2"
-            android:weightSum="2"
-            tools:ignore="ContentDescription" />
+        <!--        <LinearLayout-->
+        <!--            android:id="@+id/linearLayoutUploadMap"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginBottom="@dimen/activity_mid_margin"-->
+        <!--            android:background="@drawable/border_gray_1"-->
+        <!--            android:orientation="vertical">-->
+
+        <!--            <ImageView-->
+        <!--                android:id="@+id/imageViewMap"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="@dimen/_100sdp"-->
+        <!--                android:layout_margin="@dimen/activity_large_margin"-->
+        <!--                tools:ignore="ContentDescription" />-->
+
+        <!--            <Spinner-->
+        <!--                android:id="@+id/spinnerMapTitle"-->
+        <!--                style="@style/Widget.AppCompat.Spinner.DropDown"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:layout_marginLeft="@dimen/activity_large_margin"-->
+        <!--                android:layout_marginTop="@dimen/activity_mid_margin"-->
+        <!--                android:layout_marginRight="@dimen/activity_large_margin"-->
+        <!--                android:layout_marginBottom="@dimen/activity_mid_margin"-->
+        <!--                android:paddingLeft="@dimen/activity_large_padding"-->
+        <!--                android:paddingRight="@dimen/activity_large_padding" />-->
+
+        <!--            <Button-->
+        <!--                android:id="@+id/buttonUploadMap"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:layout_marginLeft="@dimen/activity_large_margin"-->
+        <!--                android:layout_marginTop="@dimen/activity_mid_margin"-->
+        <!--                android:layout_marginRight="@dimen/activity_large_margin"-->
+        <!--                android:layout_marginBottom="@dimen/activity_mid_margin"-->
+        <!--                android:background="@drawable/border_blue_1"-->
+        <!--                android:gravity="center"-->
+        <!--                android:paddingLeft="@dimen/activity_large_padding"-->
+        <!--                android:paddingRight="@dimen/activity_large_padding"-->
+        <!--                android:text="@string/upload"-->
+        <!--                android:textColor="@color/white"-->
+        <!--                android:textSize="@dimen/textSizeMedium"-->
+        <!--                tools:ignore="MissingConstraints" />-->
+
+
+        <!--        </LinearLayout>-->
 
         <GridView
             android:id="@+id/gridViewImage"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/activity_large_margin"
+            android:layout_marginTop="@dimen/activity_mid_margin"
+            android:layout_weight="2"
             android:background="@drawable/border_gray_1"
             android:gravity="center"
             android:nestedScrollingEnabled="true"
