--- a/app/src/main/res/layout/form_fragment_old.xml
+++ b/app/src/main/res/layout/form_fragment_old.xml
@@ -419,7 +419,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText20"
+                        android:id="@+id/editTextPelak"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -725,7 +725,7 @@
                         android:gravity="center" />
 
                     <EditText
-                        android:id="@+id/editText19"
+                        android:id="@+id/editTextSodurDate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
